2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/json-glib-1.0/:

	Various ownership fixes, patch by Evan Nemerson, fixes bug 547450

	* vapi/json-glib-1.0.vapi: regenerated

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Add g_string_truncate binding, patch by Yu Feng, fixes bug 564428

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/sqlite3.vapi:

	Add transaction hook, tracing, profiling, and mutex bindings,
	patch by Evan Nemerson, fixes bug 564571

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodemethodcallmodule.vala:
	* vapi/glib-2.0.vapi:

	Move substring method to VAPI file, handle negative and out of
	bounds values, fixes bug 443524

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gnome-keyring-1/:

	Various delegate parameter fixes, patch by Michael Terry,
	fixes bug 564068

	* vapi/gnome-keyring-1.vapi: regenerated

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/:

	Add g_io_extension_get_type binding, patch by Jared Moore,
	fixes bug 537522

	* vapi/gio-2.0.vapi: regenerated

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vala/valasizeofexpression.vala:

	Include C header files for types used in sizeof expressions,
	fixes bug 542705

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Report error when using construct properties in non-GObject
	classes, fixes bug 541728

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_status_icon_position_menu and GtkMenuPositionFunc bindings,
	fixes bug 563457

	* vapi/gtk+-2.0.vapi: regenerated

2008-12-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valagobjectmodule.vala:

	Report error when using construct blocks in non-GObject classes

2008-12-15  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_container_get_children binding

	* vapi/gtk+-2.0.vapi: regenerated

2008-12-15  Jürg Billeter  <j@bitron.ch>
